--- a/beymen-clone/src/style.css
+++ b/beymen-clone/src/style.css
@@ -1,4 +1,6 @@
 /* src/style.css (TÜM İÇERİK SİLİNİP BUNUNLA DEĞİŞTİRİLDİ) */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
